k3s/nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  type: NodePort
  ports:
    - port: 8000
      nodePort: 30800
  selector:
    app: bartenders
