k3s/bartenders.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bartenders
  labels:
    app: bartenders
    environment: all
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bartenders
  template:
    metadata:
      labels:
        app: bartenders
    spec:
      imagePullSecrets:
        - name: artifact-read
      containers:
        - name: bartenders
          image: us-east1-docker.pkg.dev/bartenders-464918/docker-us/bartenders:${IMAGE_TAG}
          ports:
            - containerPort: 8000
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: bartenders-web
  labels:
    app: bartenders
    environment: all
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: bartenders
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-external
  namespace: kube-system
  labels:
    app: bartenders
    environment: all
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      nodePort: 30080
      name: web
    - port: 443
      protocol: TCP
      targetPort: 443
      nodePort: 30443
      name: websecure
  selector:
    app.kubernetes.io/name: traefik
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gcp
  labels:
    app: bartenders
    environment: gcp
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - cheetahmoongames.com
    secretName: cheetahmoongames-tls
  rules:
  - host: cheetahmoongames.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bartenders-web
            port:
              number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-local
  labels:
    app: bartenders
    environment: local
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/issuer: test-selfsigned
spec:
  tls:
  - hosts:
    - localhost
    secretName: cheetahmoongames-tls
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bartenders-web
            port:
              number: 8000
